# 0809

./: .dockerignore  .env.example  .env.postgres  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  DOCKER_DEPLOYMENT_README.md  Dockerfile  README.md  analysis_llm.py  analysis_llm_host_enhancement.py  analysis_llm_old.py  analysis_llm_validation_patch.py  apply_judgment_algorithm.py  build-docker-fixed.sh  build-docker.sh  debug_feature_test.py  debug_ne_cell_filters_test.py  deploy.sh  docker-compose.dev.yml  docker-compose.mcp.yml  docker-compose.prod.yml  docker-compose.yml  docker-env.example  docker-load-instructions.md  eNB_pcell_HO_sourcecell.csv  env.example  h origin main  mock_backend_server.py  package-lock.json  parse_time_range_test_results.txt  payload_test_result_2025-09-02_07-59-07.json  payload_test_result_2025-09-02_07-59-48.json  peg_name_avg_compare.py  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt  run_enhanced_test.py  start.sh  (+8 more)
.taskmaster/: config.json  state.json
analysis_output_test/: Cell_Analysis_Report_2025-08-09_01-48.html  Cell_Analysis_Report_2025-08-13_22-49.html  Cell_Analysis_Report_2025-08-13_23-41.html
examples/: request.sample.json
frontend/: 3GPP KPI Dashboard 배포 완료 요약.md  README_FRONT.MD  package-lock.json  package.json
kpi_dashboard/: 3GPP KPI 대시보드_ 전체 사용 방법 및 내용.md  DEPLOYMENT.md  QUICKSTART.md  test_data_time_comparison.sql  백엔드-프론트엔드 데이터 구조 양식.md
nginx/: nginx.conf
scripts/: setup-dev.py
tests/: test_api_host_filtering.py  test_basic_imports.py  test_relationship_validation.py  (+1 more)
(+195 files in other folders)
