[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analysis-llm"
version = "2.0.0"
description = "Advanced LLM-based network analysis system with expert judgment algorithms"
authors = [
    {name = "Cell Performance Analysis Team", email = "analysis-team@example.com"}
]
dependencies = [
    "pandas>=2.2.2",
    "matplotlib>=3.8.4",
    "psycopg2-binary>=2.9.9",
    "requests>=2.32.3",
    "fastmcp>=0.1.0",
    "pymongo>=4.0.0",
    "pydantic>=2.0.0",
    "validators>=0.20.0",
    "dnspython>=2.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0"
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["analysis_llm"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "dist",
    "build",
    "*.egg-info"
]
